# cpp_cmake_template

./: .gitignore  CMakeLists.txt  README.md
inc/: main.h
